# python-etl-data-engineering

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  config.ini  pyproject.toml
src/: __init__.py  pipeline.py
src/utils/: schemas.py
tests/: test_pipeline.py
